build instructor objects in notebook

--- a/beautifulsoup_sandbox.ipynb
+++ b/beautifulsoup_sandbox.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,26 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "base_url = 'https://www.pcc.edu/schedule/default.cfm?fa=dspTopic&thisTerm=200701&type=Credit'\n",
-    "page = requests.get(base_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "page = requests.get(base_url)\n",
     "soup = BeautifulSoup(page.content, 'html.parser')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,14 +100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Adam  Scheible', 'Greg  Gerstne', 'Yunhui  Ch', 'David S Smith', 'Chuck W Fenning', 'David P Goldma', 'Todd M Sande', 'Russell B Eng', 'Doug S Fal', 'Ray M Schmelze', 'Jenna F Bell', 'Corneliu S Boghea', 'Walter  Lara', 'Mark R Brazie', 'Chuck T Litchfield', 'Trung H Le', 'Linda M Browning', 'Kevin T Buck', 'Matt J Distad', 'Catherine  Stark', 'Donald D Bell', 'Dan A Kruge', 'Matthew Q Grave', 'Richard E Fesle', 'Curtis L Lipski', 'Scott W Lowrey', 'Mark A Hage', 'Sanda N William', 'Spencer L Poff', 'Peter  Kazarinoff', 'Tara M Nel'}\n"
+      "{'Chuck W Fenning', 'Greg  Gerstne', 'Doug S Fal', 'Matthew Q Grave', 'Matt J Distad', 'Sanda N William', 'Richard E Fesle', 'Corneliu S Boghea', 'Mark R Brazie', 'Adam  Scheible', 'Donald D Bell', 'Yunhui  Ch', 'Chuck T Litchfield', 'Catherine  Stark', 'Kevin T Buck', 'David P Goldma', 'Tara M Nel', 'Curtis L Lipski', 'Spencer L Poff', 'Todd M Sande', 'David S Smith', 'Mark A Hage', 'Dan A Kruge', 'Trung H Le', 'Peter  Kazarinoff', 'Scott W Lowrey', 'Walter  Lara', 'Jenna F Bell', 'Ray M Schmelze', 'Linda M Browning', 'Russell B Eng'}\n"
      ]
     }
    ],
@@ -126,11 +118,209 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
-    "td_lst = table.find_all(\"td\")"
+    "class instructorObj():\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        self.classes=[]\n",
+    "        self.departments=[]\n",
+    "        self.office=''\n",
+    "        self.phone=''\n",
+    "        self.email=''\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.name\n",
+    "    \n",
+    "    def print_schedule(self):\n",
+    "        print(self.name)\n",
+    "        print()\n",
+    "        for x in self.classes:\n",
+    "            print(x.course_number)\n",
+    "            print(x.course_name)\n",
+    "            print(x.day)\n",
+    "            print(x.start_time)\n",
+    "            print(x.end_time)\n",
+    "            print(x.building)\n",
+    "            print(x.room_num)\n",
+    "            print()\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "peter = instructorObj('Peter  Kazarinoff')\n",
+    "peter.office = 'ST200'\n",
+    "peter.phone ='971-722-8056'\n",
+    "peter.email = 'peter.kazarinoff@pcc.edu'\n",
+    "peter.departments = ['CMET','ENGR']\n",
+    "peter.classes = [x for x in instr_section_list if x.instructor == 'Peter  Kazarinoff']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<bs4_functions.InstrSect at 0x18bddbc9668>,\n",
+       " <bs4_functions.InstrSect at 0x18bddb92a58>,\n",
+       " <bs4_functions.InstrSect at 0x18bddb928d0>,\n",
+       " <bs4_functions.InstrSect at 0x18bddb92780>,\n",
+       " <bs4_functions.InstrSect at 0x18bdd8b7f60>,\n",
+       " <bs4_functions.InstrSect at 0x18bdd8b7ef0>,\n",
+       " <bs4_functions.InstrSect at 0x18bddc15080>,\n",
+       " <bs4_functions.InstrSect at 0x18bddc15978>,\n",
+       " <bs4_functions.InstrSect at 0x18bdd9c5668>,\n",
+       " <bs4_functions.InstrSect at 0x18bdd9cea58>,\n",
+       " <bs4_functions.InstrSect at 0x18bdd9ce080>,\n",
+       " <bs4_functions.InstrSect at 0x18bdd9ce940>,\n",
+       " <bs4_functions.InstrSect at 0x18bdd9ce7f0>,\n",
+       " <bs4_functions.InstrSect at 0x18bddbe9e10>]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "peter.classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "instr_Obj_list = [] #a list of instructure Objects, each instructor has a list of class schedule objects\n",
+    "for instructor in list(instructor_set):\n",
+    "    #print(instructor)\n",
+    "    inst_Obj = instructorObj(instructor)\n",
+    "    #print(inst_Obj.name)\n",
+    "    #print(type(inst_Obj))\n",
+    "    inst_Obj.classes = [x for x in instr_section_list if x.instructor == instructor]\n",
+    "    inst_Obj.departments = list(set([x.department for x in instr_section_list if x.instructor == instructor]))\n",
+    "    instr_Obj_list.append(inst_Obj)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jenna F Bell\n",
+      "\n",
+      "CMET222\n",
+      "Thermodynamics II\n",
+      "MW\n",
+      "01:00 PM\n",
+      "04:50 PM\n",
+      "AM\n",
+      "125\n",
+      "\n",
+      "CMET223\n",
+      "Project Management\n",
+      "Tu\n",
+      "01:00 PM\n",
+      "03:50 PM\n",
+      "AM\n",
+      "107\n",
+      "\n",
+      "ENGR213\n",
+      "Strength of Materials\n",
+      "MW\n",
+      "06:00 PM\n",
+      "08:20 PM\n",
+      "ST\n",
+      "100\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "instr_Obj_list[-4].print_schedule()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scott W Lowrey\n",
+      "\n",
+      "EET123\n",
+      "Digital Systems 3\n",
+      "None\n",
+      "12:30 PM\n",
+      "02:20 PM\n",
+      "AM\n",
+      "112\n",
+      "\n",
+      "EET123\n",
+      "Digital Systems 3\n",
+      "None\n",
+      "12:30 PM\n",
+      "02:20 PM\n",
+      "AM\n",
+      "112\n",
+      "\n",
+      "EET223\n",
+      "RF Communications Circuits\n",
+      "Tu\n",
+      "02:30 PM\n",
+      "05:20 PM\n",
+      "ST\n",
+      "313\n",
+      "\n",
+      "EET223\n",
+      "RF Communications Circuits\n",
+      "None\n",
+      "08:30 AM\n",
+      "10:20 AM\n",
+      "ST\n",
+      "316\n",
+      "\n",
+      "ENGR101\n",
+      "Engineering Fundamentals\n",
+      "W\n",
+      "09:00 AM\n",
+      "11:50 AM\n",
+      "AM\n",
+      "125\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "instr_Obj_list[-6].print_schedule()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Now need to try and build the excel sheets from the peoples schedule\n",
+    "### need a fuction that takes in an InstrSectionObject and puts it in an excel doc object"
    ]
   },
   {
