working on excel

--- a/openpyxl_sandbox.ipynb
+++ b/openpyxl_sandbox.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,16 +21,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['schedule_template.xlsx', '.~lock.schedule_template.xlsx#']"
+       "['schedule_template.xlsx']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/tribilium/Documents/schedule/templates/schedule_template.xlsx'"
+       "'C:\\\\Users\\\\peter.kazarinoff\\\\Documents\\\\schedule\\\\templates\\\\schedule_template.xlsx'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "['Sheet1', 'Sheet2', 'Sheet3']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,21 +100,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SPRING 2018\n",
+      "SPRING\n",
       "CLASS SCHEDULE\n",
       "Instructor:  \n",
-      "Phone: \n",
+      "Dept: \n",
       "None\n",
       "TIME\n",
-      "07:00:00\n",
-      "=A7+time(0,30,0)\n"
+      "None\n",
+      "None\n"
      ]
     }
    ],
@@ -131,20 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'=A7+time(0,30,0)'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cell = sheet['A8']\n",
     "cell.internal_value"
@@ -152,22 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 SPRING 2018\n",
+      "1 SPRING\n",
       "2 CLASS SCHEDULE\n",
       "3 Instructor:  \n",
-      "4 Phone: \n",
+      "4 Dept: \n",
       "5 None\n",
       "6 TIME\n",
-      "7 07:00:00\n",
-      "8 =A7+time(0,30,0)\n",
-      "9 =A8+time(0,30,0)\n"
+      "7 None\n",
+      "8 None\n",
+      "9 None\n"
      ]
     }
    ],
@@ -178,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +176,7 @@
        "'A'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +197,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +218,7 @@
        "36"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +239,7 @@
        "8"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,14 +277,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time range: ['7:00 AM', '7:30 AM', '8:00 AM', '8:30 AM', '9:00 AM', '9:30 AM', '10:00 AM', '10:30 AM', '11:00 AM', '11:30 AM', '12:00 PM', '12:30 PM', '1:00 PM', '1:30 PM', '2:00 PM', '2:30 PM', '3:00 PM', '3:30 PM', '4:00 PM', '4:30 PM', '5:00 PM', '5:30 PM', '6:00 PM', '6:30 PM', '7:00 PM', '7:30 PM', '8:00 PM', '8:30 PM', '9:00 PM']\n"
+      "time range: ['07:00 AM', '07:30 AM', '08:00 AM', '08:30 AM', '09:00 AM', '09:30 AM', '10:00 AM', '10:30 AM', '11:00 AM', '11:30 AM', '12:00 PM', '12:30 PM', '01:00 PM', '01:30 PM', '02:00 PM', '02:30 PM', '03:00 PM', '03:30 PM', '04:00 PM', '04:30 PM', '05:00 PM', '05:30 PM', '06:00 PM', '06:30 PM', '07:00 PM', '07:30 PM', '08:00 PM', '08:30 PM', '09:00 PM']\n"
      ]
     }
    ],
@@ -309,7 +298,7 @@
     "        current += delta\n",
     "\n",
     "# Make a list of times from [7:00 AM, 7:30AM, ... 9:00 PM]\n",
-    "dts = [dt.strftime('%-I:%M %p') for dt in \n",
+    "dts = [dt.strftime('%I:%M %p') for dt in \n",
     "       datetime_range(datetime(2018, 4, 19, 7), datetime(2018, 4, 19, 7+14, 30), \n",
     "       timedelta(minutes=30))]\n",
     "\n",
@@ -354,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
