--- a/openpyxl_sandbox.ipynb
+++ b/openpyxl_sandbox.ipynb
@@ -9,139 +9,272 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openpyxl import load_workbook\n",
+    "\n",
+    "from openpyxl import load_workbook, Workbook\n",
     "from openpyxl.utils import get_column_letter, column_index_from_string\n",
+    "from openpyxl.styles import PatternFill, Border, Side, Alignment, Protection, Font, Fill, colors\n",
     "\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 153,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['schedule_template.xlsx']"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "os.listdir(os.path.join(os.getcwd(),'templates'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'C:\\\\Users\\\\peter.kazarinoff\\\\Documents\\\\schedule\\\\templates\\\\schedule_template.xlsx'"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "os.listdir(os.path.join(os.getcwd(),'templates'))\n",
     "template_path = os.path.join(os.getcwd(),'templates','schedule_template.xlsx')\n",
-    "template_path"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wb = load_workbook(template_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Sheet1', 'Sheet2', 'Sheet3']"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "wb.sheetnames"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "wb = load_workbook(template_path)\n",
     "sheet = wb['Sheet1']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SPRING\n",
-      "CLASS SCHEDULE\n",
-      "Instructor:  \n",
-      "Dept: \n",
-      "None\n",
-      "TIME\n",
-      "None\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sheet['A1'].value)\n",
-    "print(sheet['A2'].value)\n",
-    "print(sheet['A3'].value)\n",
-    "print(sheet['A4'].value)\n",
-    "print(sheet['A5'].value)\n",
-    "print(sheet['A6'].value)\n",
-    "print(sheet['A7'].value)\n",
-    "print(sheet['A8'].value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cell = sheet['A8']\n",
-    "cell.internal_value"
+    "year = '2018'\n",
+    "instructor = 'Peter Kazarinoff'\n",
+    "department = 'CMET ENGR'\n",
+    "email ='peter.kazarinoff@pc.edu'\n",
+    "phone ='971.722.8065'\n",
+    "\n",
+    "sheet['C3'] = instructor\n",
+    "sheet['C4'] = department\n",
+    "\n",
+    "sheet['F3'] = email\n",
+    "sheet['F4'] = phone"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 155,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "al=Alignment(horizontal='left', vertical='bottom', text_rotation=0, wrap_text=False, shrink_to_fit=False, indent=1)\n",
+    "\n",
+    "c3 = sheet['C3']\n",
+    "c4 = sheet['C4']\n",
+    "\n",
+    "f3 = sheet['F3']\n",
+    "f4 = sheet['F4']\n",
+    "c3.alignment = al\n",
+    "c4.alignment = al\n",
+    "f3.alignment = al\n",
+    "f4.alignment = al"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wkbk_path = os.path.join(os.getcwd(),'out','spreadsheet.xlsx')\n",
+    "if not os.path.exists(os.path.join(os.getcwd(),'out')):\n",
+    "    os.mkdir('out')\n",
+    "wb.save(wkbk_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_gen_info(wbsheetObj, quarter='spring', year='2018', instructor ='Peter Kazarinoff', department='CMET ENGR', email='peter.kazarinoff@pcc.edu', phone='971.722.8065'):\n",
+    "    \"\"\"\n",
+    "    function builds the header part of an excel schedule \n",
+    "    \"\"\"\n",
+    "    wbsheetObj['D1'] = quarter.upper()\n",
+    "    wbsheetObj['D1'] = year\n",
+    "    wbsheetObj['C3'] = instructor\n",
+    "    wbsheetObj['C4'] = department\n",
+    "\n",
+    "    wbsheetObj['F3'] = email\n",
+    "    wbsheetObj['F4'] = phone\n",
+    "    \n",
+    "    al=Alignment(horizontal='left', vertical='bottom', text_rotation=0, wrap_text=False, shrink_to_fit=False, indent=1)\n",
+    "\n",
+    "    c3 = wbsheetObj['C3']\n",
+    "    c4 = wbsheetObj['C4']\n",
+    "    f3 = wbsheetObj['F3']\n",
+    "    f4 = wbsheetObj['F4']\n",
+    "    c3.alignment = al\n",
+    "    c4.alignment = al\n",
+    "    f3.alignment = al\n",
+    "    f4.alignment = al\n",
+    "    \n",
+    "    return wbsheetObj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_24h_dec_time(time_str):\n",
+    "    \"\"\"\n",
+    "    This function takes in a time string of the form '2:30 PM' and outputs a 24-hour decimal hour representation of 14.5.\n",
+    "    All minutes are rounded to half hour increments\n",
+    "    \"\"\"\n",
+    "    hour = time_str.split(':')[0]\n",
+    "    min_chunk = time_str.split(':')[1]\n",
+    "    min_sm_chunk = min_chunk.replace(\" AM\", \"\")\n",
+    "    minute = min_sm_chunk.replace(\" PM\",\"\")\n",
+    "    if 'PM' in time_str and not hour == '12':\n",
+    "        hour = int(hour)+12\n",
+    "    elif 'PM' in time_str and hour == '12':\n",
+    "        hour = 12\n",
+    "    else:\n",
+    "        hour = int(hour)\n",
+    "    min_dec = float(minute)/60\n",
+    "    min_round = round(float(min_dec) * 2) / 2\n",
+    "    return hour+min_round"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0"
+      ]
+     },
+     "execution_count": 215,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_24h_dec_time('2:46 PM')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template_path = os.path.join(os.getcwd(),'templates','schedule_template.xlsx')\n",
+    "wb = load_workbook(template_path)\n",
+    "sheet = wb['Sheet1']\n",
+    "sheet = insert_gen_info(sheet)\n",
+    "wkbk_path = os.path.join(os.getcwd(),'out','spreadsheet.xlsx')\n",
+    "if not os.path.exists(os.path.join(os.getcwd(),'out')):\n",
+    "    os.mkdir('out')\n",
+    "wb.save(wkbk_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template_path = os.path.join(os.getcwd(),'templates','schedule_template.xlsx')\n",
+    "wb = load_workbook(template_path)\n",
+    "ws = wb['Sheet1']\n",
+    "ws = insert_gen_info(ws)\n",
+    "\n",
+    "course_number = 'CMET 235'\n",
+    "start_time = '9:00 AM'\n",
+    "end_time = '11:00 AM'\n",
+    "building = 'AM'\n",
+    "room = '105'\n",
+    "day = 'Tu'\n",
+    "building_and_room = \"\".join([building,room])\n",
+    "\n",
+    "#day_dict = {'M':'B','Tu':'C','W':'D','Th':'E','F':'F','Sa':'G','Su':'H'}\n",
+    "day_dict = {'M':2,'Tu':3,'W':4,'Th':5,'F':6,'Sa':7,'Su':8}\n",
+    "col = day_dict[day]\n",
+    "\n",
+    "lead_num = get_24h_dec_time(start_time)\n",
+    "above_7 = lead_num - 7\n",
+    "row = 7 + above_7*2\n",
+    "\n",
+    "lead_num = get_24h_dec_time(end_time)\n",
+    "above_7 = lead_num - 7\n",
+    "merge_end = 7 + above_7*2 - 1\n",
+    "\n",
+    "ws.merge_cells(start_row=row, start_column=col, end_row=merge_end, end_column=col)\n",
+    "ws.cell(row=row, column=col).value = \"\\n\".join([course_number, building_and_room])\n",
+    "\n",
+    "al=Alignment(horizontal='center', vertical='center', text_rotation=0, wrap_text=True, shrink_to_fit=False, indent=0)\n",
+    "ws.cell(row=row, column=col).alignment = al\n",
+    "fl=PatternFill(fill_type='solid', start_color=colors.BLUE)\n",
+    "ws.cell(row=row, column=col).fill = fl\n",
+    "\n",
+    "wkbk_path = os.path.join(os.getcwd(),'out','spreadsheet.xlsx')\n",
+    "if not os.path.exists(os.path.join(os.getcwd(),'out')):\n",
+    "    os.mkdir('out')\n",
+    "wb.save(wkbk_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 227,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_class_sec(wbsheetObj, course_number='CMET 235', building='AM', room='105', day='Tu', start_time='11:00 AM', end_time='2:30 PM', color='ADD8E6'):\n",
+    "    \"\"\"\n",
+    "    function inserts a class section into a worksheet object\n",
+    "    \"\"\"\n",
+    "    building_and_room = \"\".join([building,room])\n",
+    "    day_dict = {'M':2,'Tu':3,'W':4,'Th':5,'F':6,'Sa':7,'Su':8}\n",
+    "    col = day_dict[day]\n",
+    "    \n",
+    "    lead_num = get_24h_dec_time(start_time)\n",
+    "    above_7 = lead_num - 7\n",
+    "    row = 7 + above_7*2\n",
+    "\n",
+    "    lead_num = get_24h_dec_time(end_time)\n",
+    "    above_7 = lead_num - 7\n",
+    "    merge_end = 7 + above_7*2 - 1\n",
+    "    \n",
+    "    wbsheetObj.merge_cells(start_row=row, start_column=col, end_row=merge_end, end_column=col)\n",
+    "    wbsheetObj.cell(row=row, column=col).value = \"\\n\".join([course_number, building_and_room])\n",
+    "    al=Alignment(horizontal='center', vertical='center', text_rotation=0, wrap_text=True, shrink_to_fit=False, indent=0)\n",
+    "    wbsheetObj.cell(row=row, column=col).alignment = al\n",
+    "    fl=PatternFill(fill_type='solid', start_color=color)\n",
+    "    wbsheetObj.cell(row=row, column=col).fill = fl\n",
+    "    \n",
+    "    return  wbsheetObj"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template_path = os.path.join(os.getcwd(),'templates','schedule_template.xlsx')\n",
+    "wb = load_workbook(template_path)\n",
+    "ws = wb['Sheet1']\n",
+    "ws = insert_gen_info(ws)\n",
+    "ws = insert_class_sec(ws)\n",
+    "\n",
+    "wkbk_path = os.path.join(os.getcwd(),'out','spreadsheet.xlsx')\n",
+    "if not os.path.exists(os.path.join(os.getcwd(),'out')):\n",
+    "    os.mkdir('out')\n",
+    "wb.save(wkbk_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -150,13 +283,13 @@
      "text": [
       "1 SPRING\n",
       "2 CLASS SCHEDULE\n",
-      "3 Instructor:  \n",
-      "4 Dept: \n",
+      "3 None\n",
+      "4 None\n",
       "5 None\n",
       "6 TIME\n",
-      "7 None\n",
-      "8 None\n",
-      "9 None\n"
+      "7 07:00:00\n",
+      "8 07:30:00\n",
+      "9 08:00:00\n"
      ]
     }
    ],
@@ -167,23 +300,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'A'"
+       "['BLACK',\n",
+       " 'BLUE',\n",
+       " 'Bool',\n",
+       " 'COLOR_INDEX',\n",
+       " 'Color',\n",
+       " 'ColorDescriptor',\n",
+       " 'ColorList',\n",
+       " 'DARKBLUE',\n",
+       " 'DARKGREEN',\n",
+       " 'DARKRED',\n",
+       " 'DARKYELLOW',\n",
+       " 'Descriptor',\n",
+       " 'ExtensionList',\n",
+       " 'GREEN',\n",
+       " 'HexBinary',\n",
+       " 'IndexedColorList',\n",
+       " 'Integer',\n",
+       " 'MRUColorList',\n",
+       " 'MinMax',\n",
+       " 'RED',\n",
+       " 'RGB',\n",
+       " 'RgbColor',\n",
+       " 'Sequence',\n",
+       " 'Serialisable',\n",
+       " 'String',\n",
+       " 'Typed',\n",
+       " 'WHITE',\n",
+       " 'YELLOW',\n",
+       " '__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__spec__',\n",
+       " 'aRGB_REGEX',\n",
+       " 'absolute_import',\n",
+       " 'basestring',\n",
+       " 're',\n",
+       " 'safe_string']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Return 'A'\n",
-    "get_column_letter(1)"
+    "dir(colors)"
    ]
   },
   {
