--- a/instructor_name_sandbox.ipynb
+++ b/instructor_name_sandbox.ipynb
@@ -4,149 +4,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Beautiful Soup Sandbox\n",
-    "a notebook to investigate pulling class information out of PCC class schedule webpages"
+    "# Get instructor name sandbox\n",
+    "a notebook to investigate pulling out the instructor name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
     "import urllib\n",
-    "from bs4_functions import get_instr_sec_lst\n",
+    "from bs4_functions import get_instr_sec_lst, get_instrSect\n",
     "import pickle\n",
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2018'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "url ='https://www.pcc.edu/schedule/default.cfm?fa=dspCourse2&thisTerm=201704&crsCode=ENGR&subjCode=ENGR&crsNum=105&topicCode=GE&subtopicCode=%20'\n",
-    "page = requests.get(url)\n",
-    "soup_obj = BeautifulSoup(page.content, 'html.parser')\n",
-    "\n",
-    "def get_year(soup):\n",
-    "    nav_obj_lst = soup.findAll('nav', attrs={'id': ['breadcrumbs']})\n",
-    "    if nav_obj_lst:\n",
-    "        if nav_obj_lst[0].text:\n",
-    "            year_with_colon = \"\".join([x for x in nav_obj_lst[0].text.split(\" \") if any(c.isdigit() for c in x)])\n",
-    "            if year_with_colon:\n",
-    "                year = \"\".join([x for x in year_with_colon if x.isdigit()])\n",
-    "                return year\n",
-    "\n",
-    "get_year(soup_obj)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Tuesday', 'Thursday']"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "path = os.path.join(os.getcwd(),'out','data.pkl')\n",
-    "f = open(path,'rb')\n",
-    "instr__obj_list = pickle.load(f)\n",
-    "instr__obj_list[7].classes[0].days_list\n",
-    "#for fac in fac_lst:\n",
-    "   # print(i)\n",
-    "    #fac.print_schedule()\n",
-    "    #i += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
+    "import os\n",
     "import pickle\n",
     "import shutil\n",
     "from class_page_iter_tools import get_dept_urls, get_class_url_lst\n",
     "from bs4_functions import get_instr_sec_lst\n",
     "from schedule_functions import instructorObj\n",
-    "import os\n",
     "from schedule_functions import insert_gen_info, insert_class_sec\n",
-    "from openpyxl import load_workbook"
+    "from openpyxl import load_workbook\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://www.pcc.edu/schedule/default.cfm?fa=dspCourse2&thisTerm=201803&crsCode=ENGR&subjCode=ENGR&crsNum=213&topicCode=GE&subtopicCode=%20'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "{0} is not a valid coordinate or range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-657d8756168f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0msect\u001b[0m \u001b[1;32min\u001b[0m \u001b[0minstr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclasses\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mday\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdays_list\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m             \u001b[0mws\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minsert_class_sec\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mws\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcourse_number\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mbuilding\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mroom_number\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mday\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart_time\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msect\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend_time\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[1;31m# save schedule in output folder with instructor name and year, quarter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Documents\\schedule\\schedule_functions.py\u001b[0m in \u001b[0;36minsert_class_sec\u001b[1;34m(wbsheetObj, course_number, building, room, day, start_time, end_time, color)\u001b[0m\n\u001b[0;32m     66\u001b[0m     \u001b[0mmerge_end\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m7\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mabove_7\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;36m2\u001b[0m \u001b[1;33m-\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m     \u001b[0mwbsheetObj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmerge_cells\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstart_row\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart_column\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend_row\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmerge_end\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend_column\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     69\u001b[0m     \u001b[0mwbsheetObj\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcell\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrow\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcolumn\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcol\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"\\n\"\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcourse_number\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbuilding_and_room\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[0mal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mAlignment\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhorizontal\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'center'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvertical\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'center'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtext_rotation\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwrap_text\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshrink_to_fit\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\openpyxl\\worksheet\\worksheet.py\u001b[0m in \u001b[0;36mmerge_cells\u001b[1;34m(self, range_string, start_row, start_column, end_row, end_column)\u001b[0m\n\u001b[0;32m    708\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_merged_cells\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange_string\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    709\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 710\u001b[1;33m         \u001b[0mmin_col\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmin_row\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_col\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_row\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrange_boundaries\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange_string\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    711\u001b[0m         \u001b[0mrows\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin_row\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_row\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    712\u001b[0m         \u001b[0mcols\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin_col\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_col\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\openpyxl\\utils\\cell.py\u001b[0m in \u001b[0;36mrange_boundaries\u001b[1;34m(range_string)\u001b[0m\n\u001b[0;32m    127\u001b[0m     \u001b[0mm\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mABSOLUTE_RE\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatch\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrange_string\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    128\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 129\u001b[1;33m         \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"{0} is not a valid coordinate or range\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    130\u001b[0m     \u001b[0mmin_col\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmin_row\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msep\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_col\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_row\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgroups\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    131\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: {0} is not a valid coordinate or range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doug S Fal\n"
      ]
     }
    ],
    "source": [
-    "for instr in instr__obj_list:\n",
-    "    inst_name = \"_\".join([x.strip() for x in instr.name.split(\" \")[:]])\n",
-    "    xlsx_file_name = \"\".join([inst_name, instr.quarter, instr.year, '.xlsx'])\n",
-    "    template_path = os.path.join(os.getcwd(),'templates','schedule_template.xlsx')\n",
-    "    wb = load_workbook(template_path)\n",
-    "    ws = wb['Sheet1']\n",
-    "        \n",
-    "    ws = insert_gen_info(ws, instr.quarter, instr.year, instr.name, \" \".join(instr.departments), instr.email, instr.phone)\n",
-    "        \n",
-    "    for sect in instr.classes:\n",
-    "        for day in sect.days_list:\n",
-    "            ws = insert_class_sec(ws, sect.course_number, sect.building, sect.room_number, day, sect.start_time, sect.end_time)\n",
+    "page = requests.get(url)\n",
+    "soup = BeautifulSoup(page.content, 'html.parser')\n",
+    "rows = soup.findAll('tr', attrs={'class': ['data-row ', 'info-row ', 'data-row alt-color', 'info-row alt-color']})\n",
+    "inst_sec_lst = []\n",
+    "for i in range(int(len(rows) / 2)):\n",
+    "    # print('This is instructor time block {}'.format(i))\n",
+    "    row_lst = rows[i * 2:i * 2 + 2]\n",
+    "    instr_sec = get_instrSect(row_lst)\n",
+    "    inst_sec_lst.append(instr_sec)\n",
     "\n",
-    "        # save schedule in output folder with instructor name and year, quarter\n",
-    "    wkbk_path = os.path.join(os.getcwd(),'out',xlsx_file_name)\n",
-    "    if not os.path.exists(os.path.join(os.getcwd(),'out')):\n",
-    "        os.mkdir('out')\n",
-    "    wb.save(wkbk_path)"
+    "print(instr_sec_lst[0].instructor)\n",
+    "row_lst = rows[0:2] "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<tr class=\"data-row \">\n",
+      "<td>30130</td>\n",
+      "<td><a href=\"http://www.pcc.edu/location/default.cfm?fa=findLocation&amp;siteCode=SY&amp;frm_location=SS\"> Sylvania  Campus / SS</a> / 104 \n",
+      "\t\t\t\t\t\t\t</td>\n",
+      "<td>03:00 PM-05:20 PM</td>\n",
+      "<td><acronym title=\"Tuesday Thursday \">TuTh</acronym></td>\n",
+      "<td>26-Jun-2018 thru 06-Sep-2018</td>\n",
+      "<td class=\"materials\" rowspan=\"2\"><a href=\"http://bookstore.pcc.edu/store1/SelectCourses.aspx?src=2&amp;type=2&amp;stoid=41&amp;trm=Summer 18&amp;cid=30130\">Textbooks<span class=\"visually-hide\"> for CRN 30130</span></a> </td>\n",
+      "</tr>, <tr class=\"info-row \">\n",
+      "<td>\n",
+      "</td>\n",
+      "<td colspan=\"4\">\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tInstructor: <a href=\"http://www.pcc.edu/scripts/sdquery.pl?all=douglas%2Efalcon%40pcc%2Eedu\">Doug S Falcon</a>\n",
+      "<br/>\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tTuition: <a href=\"http://www.pcc.edu/enroll/paying-for-college/tuition/\">credit</a> Fees: $6.00\n",
+      "\t\t\t\t\t\t\t\t<br/>\n",
+      "</td>\n",
+      "</tr>]\n"
+     ]
+    }
+   ],
    "source": [
-    "type(fac_lst[0].classes)"
+    "print(row_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Doug S Falcon\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_instructor(row_lst):\n",
+    "    \"\"\"\n",
+    "    input: row_lst, a list of bs4Tag objects with 2 elements, one data-row and one info-row\n",
+    "    \"\"\"\n",
+    "    td_lst = row_lst[1].find_all(\"td\")\n",
+    "    for td in td_lst:\n",
+    "        # print(td.text.strip())\n",
+    "        if td.text:\n",
+    "            if \"Instructor: \" in td.text.strip():\n",
+    "                instructor_long = td.text.strip()\n",
+    "                instructor_line = instructor_long.split(\"\\n\")[0]\n",
+    "                instructor_name = instructor_line.split(\"Instructor: \")[1]\n",
+    "                instructor_name_stripped = instructor_name.strip()\n",
+    "                \n",
+    "                \n",
+    "                \n",
+    "                return instructor_name_stripped\n",
+    "                \n",
+    "\n",
+    "instructor = get_instructor(row_lst)\n",
+    "print(instructor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tInstructor: Doug S Falcon\n",
+      "\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\t\t\t\t\t\t\t\tTuition: credit Fees: $6.00\n",
+      "\t\t\t\t\t\t\t\t\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "for row in row_lst:\n",
+    "    td_lst = row.findAll('td', attrs={'colspan': ['4']})\n",
+    "    for td in td_lst:\n",
+    "        #print(td.text)\n",
+    "        if \"Instructor: \" in td.text:\n",
+    "            print(td.text)\n",
+    "        #m = re.search('Instructor: (\\S+)', td.text, re.IGNORECASE)\n",
+    "       # print(m.group(2)) \n",
+    "    "
    ]
   },
   {
