--- a/bs4_sandbox_2022-12-13.ipynb
+++ b/bs4_sandbox_2022-12-13.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_content_div_from_dept_course_page(dept_url=\"https://www.pcc.edu/schedule/default.cfm?fa=dspTopicDetails&thisTerm=202301&topicid=GE&type=Credit\"):\n",
+    "def get_content_div_from_page(dept_url=\"https://www.pcc.edu/schedule/default.cfm?fa=dspTopicDetails&thisTerm=202301&topicid=GE&type=Credit\"):\n",
     "    \"\"\"\n",
     "    dept_url = <str>\n",
     "    returns <bs4.element.Tag>\n",
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "page_content_div = get_content_div_from_dept_course_page()"
+    "page_content_div = get_content_div_from_page()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "bs4.element.Tag"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        " 'https://www.pcc.edu/schedule/default.cfm?fa=dspCourse2&thisTerm=202301&crsCode=ENGR222&topicCode=GE&subtopicCode=%20']"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,12 +148,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_list_of_course_links_from_dept_page(dept_url=\"https://www.pcc.edu/schedule/default.cfm?fa=dspTopicDetails&thisTerm=202301&topicid=GE&type=Credit\"):\n",
-    "    content_div = get_content_div_from_dept_course_page(dept_url)\n",
+    "    content_div = get_content_div_from_page(dept_url)\n",
     "    dl = get_course_list_dl_from_content_div(content_div)\n",
     "    link_lst = get_list_of_course_links_from_dl(dl)\n",
     "    return link_lst"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        " 'https://www.pcc.edu/schedule/default.cfm?fa=dspCourse2&thisTerm=202301&crsCode=ENGR222&topicCode=GE&subtopicCode=%20']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1581,7 +1581,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.15 ('door-schedule')",
    "language": "python",
    "name": "python3"
   },
@@ -1595,7 +1595,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.15"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "c9dd2ce79dc6ef08694a69fe7e406b22e2ce8d96c6e24b967e3a4e1e9ec81396"
+   }
   }
  },
  "nbformat": 4,
