--- a/test_page_list_functions.ipynb
+++ b/test_page_list_functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,25 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['https://www.pcc.edu/schedule/default.cfm?fa=dspTopicDetails&thisTerm=201902&topicid=CMET&type=Credit',\n",
-       " 'https://www.pcc.edu/schedule/default.cfm?fa=dspTopicDetails&thisTerm=201902&topicid=EET&type=Credit',\n",
-       " 'https://www.pcc.edu/schedule/default.cfm?fa=dspTopicDetails&thisTerm=201902&topicid=GE&type=Credit']"
+       "['https://www.pcc.edu/schedule/spring/eet/',\n",
+       " 'https://www.pcc.edu/schedule/spring/ge/']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# https://www.pcc.edu/schedule/default.cfm?fa=dspTopic&thisTerm=201902&type=Credit\n",
-    "url = 'https://www.pcc.edu/schedule/default.cfm?fa=dspTopic&thisTerm=201902&type=Credit'\n",
+    "url = 'https://www.pcc.edu/schedule/spring/credit/'\n",
     "get_dept_urls(url)"
    ]
   },
@@ -72,7 +71,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.16 64-bit ('door-schedule')",
    "language": "python",
    "name": "python3"
   },
@@ -86,7 +85,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.16"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "0afd8c77be551db322c6d3535b5c83e2782fda205ea397a06027c8eeffd0fac8"
+   }
   }
  },
  "nbformat": 4,
